@@ -7,6 +7,9 @@ Revision history for BSON
     - Checks for JSON serialization of 0.0 with a regular expression to
       account for the way that different JSON backends will handle it.
 
+    - Skip testing TO_JSON under JSON::PP if the value to be converted
+      is false. See https://github.com/makamaka/JSON-PP/pull/23 for why.
+
     [~Internal Changes~]
 
     - Disambiguates calls to 'ref' in BSON::DBRef to avoid warnings.
